--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,48 @@
+amqp==5.2.0
 asgiref==3.7.2
 attrs==23.2.0
+billiard==4.2.0
+celery==5.4.0
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+defusedxml==0.7.1
+diff-match-patch==20230430
 Django==5.0.1
+django-import-export==4.0.3
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.1
 drf-spectacular==0.27.2
+et-xmlfile==1.1.0
 inflection==0.5.1
 jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
+kombu==5.3.7
+MarkupPy==1.14
+numpy==1.26.4
+odfpy==1.4.1
+openpyxl==3.1.2
+pandas==2.2.2
 pillow==10.3.0
+prompt-toolkit==3.0.43
+PyJWT==2.8.0
 pypng==0.20220715.0
 PyQRCode==1.2.1
+python-dateutil==2.9.0.post0
 pytz==2023.3.post1
 PyYAML==6.0.1
 qrcode==7.4.2
 referencing==0.35.1
 rpds-py==0.18.1
+six==1.16.0
 sqlparse==0.4.4
+tablib==3.5.0
+tabulate==0.9.0
 typing_extensions==4.11.0
+tzdata==2024.1
 uritemplate==4.1.1
+vine==5.1.0
+wcwidth==0.2.13
+xlrd==2.0.1
+xlwt==1.3.0
