requirements.txt added

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ click-repl==0.3.0
 defusedxml==0.7.1
 diff-match-patch==20230430
 Django==5.0.1
+django-cleanup==8.1.0
 django-import-export==4.0.3
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
@@ -26,6 +27,7 @@ openpyxl==3.1.2
 pandas==2.2.2
 pillow==10.3.0
 prompt-toolkit==3.0.43
+psycopg2-binary==2.9.9
 PyJWT==2.8.0
 pypng==0.20220715.0
 PyQRCode==1.2.1
