--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ defusedxml==0.7.1
 diff-match-patch==20230430
 Django==5.0.1
 django-cleanup==8.1.0
+django-cors-headers==4.4.0
 django-import-export==4.0.3
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
